decreased max width to avoid too big image.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -941,7 +941,7 @@ a.article-title:hover {
 }
 .article-entry img,
 .article-entry video {
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
   display: block;
   margin: auto;
